cambios crud
qr,crud y front